<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".StocksActivity">
    <item
        android:id="@+id/action_change_units"
        android:icon="@drawable/ic_attach_money"
        android:title="@string/btn_action_change_units"
        app:showAsAction="always" />
    <item android:id="@+id/action_settings"
          android:title="@string/action_language"
          android:orderInCategory="100"
          app:showAsAction="never" />
</menu>
